--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.50.4",
     "react-native-config": "^0.10.0",
     "react-native-device-info": "0.11.0",
+    "react-native-vector-icons": "4.3.0",
     "react-navigation": "1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
@@ -61,6 +62,7 @@
     "ignite-ir-boilerplate": "^2.3.1",
     "ignite-redux-persist": "^1.1.0",
     "ignite-standard": "^1.0.0",
+    "ignite-vector-icons": "^1.1.0",
     "jest": "22.1.2",
     "mockery": "^2.1.0",
     "react-dom": "16.0.0",
@@ -68,6 +70,7 @@
     "reactotron-react-native": "^1.13.2",
     "reactotron-redux": "^1.13.0",
     "reactotron-redux-saga": "^1.13.0",
+    "remote-redux-devtools": "^0.5.12",
     "snazzy": "^7.0.0",
     "standard": "10.0.2"
   },
